--- a/layout.html
+++ b/layout.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mark Berg</title>
-	<link rel="stylesheet" href="{{url_for('static',filename='css/main.css')}}">
-	 <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
+	<link rel="stylesheet" href="./Projects/classicSite/static/css/main.css">
+	<script type="text/javascript" src="./Projects/classicSite/static/js/main.js"></script>
+	<link rel="icon" href="./Projects/classicSite/static/pics/nerd.png" />
 
 </head>
 <body>
@@ -12,10 +13,10 @@
 		
 			<h1 class="logo">Mark Berg</h1>
 			<nav>
-					<span><a href="{{url_for('home', _anchor='HomePage')}}">Home</a></span>
-					<span><a href="{{url_for('home', _anchor='AboutSection')}}">About</a></span>
-					<span><a href="{{url_for('home', _anchor='EducationSection')}}">Education</a></span>
-					<span><a href="{{url_for('home', _anchor='SkillSection')}}">Skills</a></span>
+					<span><a href="#HomePage">Home</a></span>
+					<span><a href="#AboutSection">About</a></span>
+					<span><a href="#EducationSection">Education</a></span>
+					<span><a href="#SkillSection">Skills</a></span>
 					
 			</nav>
 		
@@ -30,16 +31,16 @@
 <div class="home">
 
 	<div class="pageTitle">
-	<h1>Thank you for visiting my website.</h1>
+	<h1>Thank you for visiting my FIRST website.</h1>
 	</div>
 	<div class="introduction">
 	
-	<img src="static/pics/profile.jpg" class="propic">
+	<img src="./Projects/classicSite/static/pics/profile.jpg" class="propic">
 	
 	<div class="introblurbs">
 	<p class="intro">Not only is the website built by me, but it is also hosted on a cloud server I implemented and configured. </p>
 	<p class="intro">This site exists as a portfolio and a testing ground for my Networking and Programming skill sets!</p>
-	<p class="intro">I am currently looking for full-time work and projects to join. If you are looking for a passionate, fun-loving, security-focused professional, please reach out through LinkedIn. I love connecting with others in the industry.</p>
+	<p class="intro">Although this portfolio site is now depreciated, I've included it in my portfolio as it was the first thing I coded entirely on my own and serves as a benchmark of where I was compared to where I am now.</p>
 
 
 	
@@ -207,13 +208,13 @@
 	<div class="hidden" id="eduBlurbTwo">
 		<div class="allcerts"> 
 		<div class="cert">
-		<img src="/static/pics/CompTIA_A_2B.png">
+		<img src="./Projects/classicSite/static/pics/CompTIA_A_2B.png">
 	</div>
 	<div class="cert">
-		<img src="/static/pics/CompTIA_Network_2B.png">
+		<img src="./Projects/classicSite/static/pics/CompTIA_Network_2B.png">
 	</div>
 	<div class="cert">
-		<img src="/static/pics/CompTIA_Security_2B.png">
+		<img src="./Projects/classicSite/static/pics/CompTIA_Security_2B.png">
 	</div>
 	</div>
 	</div>
